Find User with Email

--- a/src/main/resources/messages/open-id-authentication.properties
+++ b/src/main/resources/messages/open-id-authentication.properties
@@ -17,6 +17,8 @@ properties.client.secret=Client Secret
 properties.scope=Scope
 properties.user.provision=User Provisioning Enabled
 properties.user.save.access.token=Save Access Token And Refresh Token To User Meta?
+properties.openid.debugMode=Debug Mode
+properties.openid.debugMode.desc=Enable Debug Mode
 title.configure.button=Configure OpenID Connect Login Button
 properties.button.label.text=Login Button Text
 properties.button.icon=Login Button Icon
